--- a/SportsSideKick/app/src/main/res/values-ru/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-ru/strings.xml
@@ -4,27 +4,25 @@
     <string name="this_language">Русский</string>
 
     <!-- Login screen -->
-    <string name="login_sign_up">Sign up</string>
-    <string name="login_login">Log In</string>
+    <string name="login_sign_up">Регистрация</string>
+    <string name="login_login">Войти</string>
     <string name="login_slider_text_1_phone">Bringing <font color="#c3ff01"> fans </font> together</string>
-    <string name="login_login_email">Email</string>
-    <string name="login_login_password">Password</string>
-    <string name="login_login_forgot_text">Forgot?</string>
-    <string name="login_login_message_login_failed">Login failed. Try again later!</string>
-    <string name="login_login_message_authentication_failed">Login failed. Check user name and password!</string>
-    <string name="forgot_password_text">Reset your password</string>
-    <string name="forgot_password_button_text">Reset Password</string>
+    <string name="email">Эл. почта</string>
+    <string name="password">Пароль</string>
+    <string name="login_login_forgot_text">Забыли?</string>
+    <string name="login_login_message_login_failed">Не удалось войти!</string>
+    <string name="login_login_message_authentication_failed">Не удалось войти!</string>
+    <string name="forgot_password_text">Сброс пароля</string>
+    <string name="forgot_password_button_text">Сбросить пароль</string>
     <string name="forgot_password_message">Please check your email for password reset options.</string>
     <string name="forgot_password_error_message">Please enter a valid email address!</string>
     <string name="forgot_password_error">Error</string>
-    <string name="sign_up_facebook">Sign up with Facebook</string>
-    <string name="sign_up_or">or</string>
-    <string name="sign_up_first_name">First name</string>
-    <string name="sign_up_last_name">Last name</string>
-    <string name="sign_up_username">Display name</string>
-    <string name="sign_up_email">Email</string>
+    <string name="sign_up_facebook">Регистрация через Facebook</string>
+    <string name="or">или</string>
+    <string name="sign_up_first_name">Имя</string>
+    <string name="sign_up_last_name">Фамилия</string>
+    <string name="sign_up_username">Имя пользователя</string>
     <string name="sign_up_phone">Phone</string>
-    <string name="sign_up_password">Password</string>
     <string name="sign_up_sign_up">Sign up</string>
     <string name="sign_up_text">By singing up, you are agree to SportsSidekick\'"s <font color="@android:color/white"> Terms and Conditions of Use </font> and <font color="@android:color/white">Privacy Policy.</font></string>
 
@@ -101,7 +99,7 @@
     <string name="nickname">Nickname</string>
     <string name="email_address">Email Address</string>
     <string name="telephone_no">Telephone No</string>
-    <string name="member_info">Member info</string>
+    <string name="member_info">Информация об участнике</string>
 
 
     <plurals name="days_until_match">
@@ -111,7 +109,7 @@
     </plurals>
 
     <!-- tutorial values -->
-    <string name="share_using">Share with:</string>
+    <string name="share_using">Поделиться:</string>
     <string name="enter_comment_hint">Enter your comment here...</string>
 
     <string name="video_chat_permission_microphone_and_camera_rationale">Please enable microphone and camera in order to use video chat.</string>
@@ -256,8 +254,6 @@
     <string name="user_name">User Name:</string>
     <string name="last_name_profile">Last Name:</string>
     <string name="first_name_profile">First Name:</string>
-    <string name="email">Email:</string>
-    <string name="password">Password:</string>
     <string name="profile">Profile</string>
     <string name="stash">Stash</string>
     <string name="join_official_account"><![CDATA[Join official Account >]]></string>
