--- a/SportsSideKick/app/src/main/res/values/strings.xml
+++ b/SportsSideKick/app/src/main/res/values/strings.xml
@@ -1,11 +1,13 @@
 <resources>
 
-    <!-- links and API keys -->
-    <string name="friend_requests">Friend Requests</string>
     <string name="this_language">English</string>
-
-    <!-- Terms and privacy -->
+    <string name="friend_requests">Friend Requests</string>
     <string name="terms_and_privacy">Terms &amp; Privacy</string>
+
+    <!--Placeholders, not translatable-->
+    <string name="demo_content_lorem_long" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
+    <string name="demo_content_number_1" translatable="false">204</string>
+    <string name="demo_content_number_2" translatable="false">6901</string>
 
     <!-- Sign in/ Sign up screen -->
     <string name="login_sign_up">Sign up</string>
@@ -36,8 +38,6 @@
     <string name="sign_up_text">By singing up, you are agree to Fanschart\'\"s <font color="@android:color/white"> Terms and Conditions of Use </font> and <font color="@android:color/white">Privacy Policy.</font></string>
 
     <!-- General -->
-    <string name="demo" translatable="false">demo</string>
-    <string name="scrolling_news_demo_value" translatable="false">Sporting CP pens deal with FHK</string>
     <string name="fist_name_warning">Please fill in your first name.</string>
     <string name="email_validation_warning">Please fill in your email.</string>
     <string name="display_name_validation_warning">Please fill in your display name.</string>
@@ -120,7 +120,7 @@
     <string name="your_friends_title">Your Friends</string>
     <string name="your_friends_search_hint">Search your friends</string>
     <string name="your_friends_request">Friend requests</string>
-    <string name="time_info_player" translatable="false">%1$tM:%1$tS / %2$tM:%2$tS</string>
+    <string name="time_info_player">%1$tM:%1$tS / %2$tM:%2$tS</string>
 
     <!-- video chat -->
     <string name="video_chat_text_1"><![CDATA[ Watch the match with your <font color="#c3ff01">friends.</font>]]></string>
@@ -189,7 +189,7 @@
     <string name="video_chat_receive_call">Receiving a call from</string>
     <string name="video_chat_accept_call">Accept the call?</string>
     <string name="permissions">Permissions</string>
-    <string name="wall_new_post_subtitle" translatable="false">A subtitle…</string>
+    <string name="wall_new_post_subtitle">A subtitle…</string>
     <string name="wall_text_for_post">Write your post here.</string>
     <string name="chat_friends_in_chat">Friends in Chat</string>
     <string name="chat_friend_in_chat">1 Friend in Chat</string>
@@ -230,7 +230,7 @@
     <string name="tutorial_earn">Tap here to earn 5 for viewing this How to!</string>
     <string name="add_users">Add friends to this chat</string>
     <string name="playlist">PLAYLIST</string>
-    <string name="default_time" translatable="false">00:00 / 00:00</string>
+    <string name="default_time">00:00 / 00:00</string>
     <string name="write_post_hint">Write your post here.</string>
     <string name="user">User</string>
     <string name="stats">Stats</string>
@@ -265,34 +265,23 @@
     <string name="login_or_sign_up">Login / Signup</string>
     <string name="rewards_and_items_received">Rewards and items received from Gym Bags</string>
     <string name="you_have">YOU HAVE</string>
-    <string name="bonus_gym_bag" translatable="false">+ BONUS GYM BAG</string>
-    <string name="bundles" translatable="false">BUNDLES</string>
+    <string name="bonus_gym_bag">+ BONUS GYM BAG</string>
+    <string name="bundles">BUNDLES</string>
     <string name="vs">vs</string>
     <string name="login_sign_up_text">Login / Signup</string>
     <string name="add_new_chat">ADD NEW CHAT</string>
-    <string name="demo_caption" translatable="false">Demo caption Demo caption Demo caption Demo caption</string>
-    <string name="comment_text" translatable="false">Demo Comment text</string>
     <string name="chat_hint">Enter your message here…</string>
     <string name="create">Create</string>
-    <string name="demo_content" translatable="false">Demo content.</string>
-    <string name="demo_content_lorem_short" translatable="false">Ut enim ad minima veniam.</string>
-    <string name="demo_content_lorem_medium" translatable="false">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</string>
-    <string name="demo_content_lorem_long" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
-    <string name="demo_content_number_1" translatable="false">204</string>
-    <string name="demo_content_number_2" translatable="false">6901</string>
     <string name="caps">CAPS</string>
-    <string name="join_official_chat"><![CDATA[Join Official Chat >]]></string>
+    <string name="join_official_chat">Join Official Chat ></string>
     <string name="join_group">Join Group</string>
     <string name="rumour">RUMOUR</string>
-    <string name="soccer_boot" translatable="false">SOCCER BOOT</string>
     <string name="shop">Shop</string>
-    <string name="store_big">STORE</string>
     <string name="waiting_for_active_internet_connection">Waiting for active internet connection…</string>
     <string name="no_connection_title">No Connection</string>
     <string name="no_connection_message">You need to be connected to the internet to do this</string>
 
     <integer name="progress_bar_max">100</integer>
-    <integer name="progress_bar_30">30</integer>
     <integer name="progress_bar_60">65</integer>
     <integer name="progress_bar_mid">50</integer>
 
@@ -325,7 +314,6 @@
     <string name="profile">Profile</string>
     <string name="stash">Stash</string>
     <string name="join_official_account"><![CDATA[Join official Account >]]></string>
-    <string name="mutual_friends">Mutual Friends</string>
     <string name="friends_you_have_in_common">Friends you have in common</string>
     <string name="join_now_sign_in">Join Now / Sign In</string>
     <string name="join_now">Join Now</string>
@@ -373,7 +361,6 @@
         <item>Arabic</item>
     </string-array>
 
-
     <string name="mins_ago">mins ago</string>
     <string name="friend_request_pending">Friend Request Pending</string>
     <string name="request_pending">Request Pending</string>
@@ -389,9 +376,6 @@
     <string name="permission_storage_denied">You need to enable Write permission in settings </string>
     <string name="permission_storage_neverask">Never ask again.</string>
 
-    <string name="welcome_your_account_is_being_setup"><![CDATA[ Welcome, your account is being setup! While you\n wait, check out some of our <font color="#c3ff01"> awesome features! </font> ]]></string>
-
-    <string name="your_ready_to_play"><![CDATA[ You are ready to play.\n  <font color="#c3ff01"> Welcome to the team. </font> ]]></string>
     <string name="login_slider_chat"><![CDATA[ You can chat with  <font color="#c3ff01"> friends, create groups </font>and even\n connect with your <font color="#c3ff01"> favourite players! </font>]]></string>
     <string name="chat_with_friends"><![CDATA[ Chat with  <font color="#c3ff01"> friends. </font>]]></string>
     <string name="to_access_full_features">To access full features …</string>
@@ -408,15 +392,9 @@
     <string name="disable_wall_notifications">Disable wall notifications</string>
     <string name="search">Search</string>
     <string name="news">NEWS</string>
-    <string name="pin_count_placeholder" translatable="false">--</string>
     <string name="next_match">Next match</string>
-    <string name="ellipsis" translatable="false">…</string>
-    <string name="message_time_splitter" translatable="false">|</string>
-    <string name="password_placeholder" translatable="false">***********</string>
-    <string name="max_level_value" translatable="false">99</string>
     <string name="reset">Reset</string>
     <string name="offline">offline</string>
-    <string name="watch_promo" translatable="false">Watch promo</string>
     <string name="single_user_is_typing">%1$s! is typing…</string>
     <string name="multiple_users_are_typing">Multiple users are typing…</string>
     <string name="record_video">Record Video</string>
