--- a/SportsSideKick/app/src/main/res/values-ru/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-ru/strings.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <string name="friend_requests">Friend Requests</string>
-    <string name="this_language">Русский</string>
+    <string name="language_current">Русский</string>
 
     <!-- Login screen -->
     <string name="login_sign_up">Регистрация</string>
